# StandCO

./: .gitignore  README.md  pyproject.toml
src/: config.json  connection.py
standco/configs/: config_pressure_relay_test.json  config_pressure_relays.json  config_pressure_relays_test.json  config_pressure_sensor.json  config_pressure_sensors.json  config_pressure_sensors_test.json  relays_config.json  relays_config_test.json
standco/logs/: sensor_log_2024-12-20_11-05-22.csv  sensor_log_2024-12-20_11-06-38.csv
standco/src/: config.json  connection_manager.py  data_logger.py  main.py  relay_manager.py  sensor_manager.py  stand_gui.py  states_reader.py
standco/src/gui/: stand_gui.py
standco/src/gui/graphs/: graph_plot.py
standco/src/gui/indicators/: relay_indicator.py
standco/src/loggers/: data_logger.py
standco/src/managers/: connection_manager.py  relay_manager.py  sensor_manager.py
standco/src/states_reader/: states_reader.py
standco/src/utils/: connection_util.py
