[tool.poetry]
name = "standco"
version = "0.1.0"
description = ""
authors = ["example <example@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymodbus = "^3.7.4"
pyqt6 = "^6.7.1"
pyqtgraph = "^0.13.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
